# pointbreak

./: .envrc  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  SECURITY.md  build.rs  cog.toml  flake.nix  mise.toml  rustfmt.toml
.claude/: settings.json
.claude/hooks/: format-rust.sh
.claude/skills/test/: SKILL.md
.claude/skills/verify/: SKILL.md
.config/: nextest.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci-nix-windows-spike.yml  ci-nix.yml  ci.yml  release-binaries.yml  release-plan.yml  release.yml  verify-release.yml  windows-ci-measure.yml
.pointbreak/: allowed-signers.json
.shore/: delegates.json
assets/marketing/: review-interface-capture.json
benches/: store_backend.rs  store_foundation.rs
docs/: PRIVACY.md  TERMS.md  adr-0001-note-body-materialization.md  agent-authoring.md  ai-assistants.md  architecture.md  assessment-model.md  benchmarking.md  cli-reference.md  development.md  disposition-model.md  event-versioning.md  faq.md  getting-started.md  hunk-feedback.md  id-prefixes.md  input-request-model.md  installation.md  intervention-model.md  library-api.md  manual-testing.md  mcp-configuration.md  releasing.md  review-workflow.md  signing-ux.md  storage-model.md  substrate-language.md  substrate-thesis-summary.md  troubleshooting.md  usage.md
docs/adr/: adr-0001-note-body-materialization.md  adr-0002-large-snapshot-artifact-policy.md  adr-0003-agent-resource-claims-advisory-first.md  adr-0004-event-signatures.md  adr-0007-writer-act-vocabulary.md  adr-0008-cross-peer-conflict-policy.md  adr-0009-resumption-binding-trust-source.md  adr-0010-actor-identity-and-delegation.md  adr-0014-reviewunit-commit-range-lifecycle.md  adr-0015-single-common-dir-store.md  adr-0016-content-targeted-artifact-removal-and-compaction.md  adr-0024-secondary-read-index-substrate.md  adr-0025-read-time-diff-syntax-highlighting.md  adr-0028-id-prefix-convention.md  adr-0029-cli-output-mode-convention.md  adr-0030-named-command-surface.md  adr-0032-emitted-document-namespace.md  adr-0033-user-level-family-store-tier.md  adr-0040-git-backend-seam-and-hybrid.md
examples/: migrate-store.rs  migrate-substrate.rs  review_example_pack.rs
examples/review/checkout-refactor/: README.md  events.json  manifest.json  source.bundle
examples/support/: review_example_pack.rs
extensions/vscode/: .vscodeignore  NOTICE  README.md  biome.json  build.mjs  package-lock.json  package.json  tsconfig.json
extensions/vscode/src/: attentionView.ts  binary.ts  cli.ts  extension.ts  idDisplay.ts  inspectChild.ts  inspectClient.ts  inspectConnectionStore.ts  logger.ts  problemsSnapshot.ts  reviewPanel.ts  reviewServerRegistry.ts  reviewTerminal.ts  revisionOrder.ts  sourceMapping.ts  targetResolver.ts  (+3 more)
scripts/: assert-release-identity-selftest.sh  assert-release-identity.sh  capture-inspector-screenshots.sh  finalize-cocogitto-release-tag-selftest.sh  finalize-cocogitto-release-tag.sh  install-selftest.ps1  install-selftest.sh  install.ps1  install.sh  link-agent-skills.sh  materialize-inspector-decision-matrix.sh  run-release-plan.sh  run-release-verification.sh  verify-inspector-decision-continuity.mjs  verify-inspector-decision-continuity.sh  worktree-to-fixture.sh
skills/: README.md
skills/shoreline-author/: SKILL.md
skills/shoreline-author-response/: SKILL.md
skills/shoreline-reviewer/: SKILL.md
src/: bench_support.rs  canonical_hash.rs  cli_tracing.rs  dump.rs  error.rs  lib.rs  main.rs  test_fixtures.rs
src/cli/: assessment.rs  association.rs  capture.rs  common.rs  diff.rs  dump.rs  endorse.rs  help_vocab_guard.rs  history.rs  id_resolver.rs  idresolve.rs  input.rs  json.rs  mod.rs  notes.rs  output.rs  reference_coverage.rs  show.rs  store.rs  theme.rs  workflow_help_guard.rs
src/crypto/: did_key.rs  ed25519.rs  mod.rs
src/documents/: capture.rs  mod.rs  revision.rs  unit.rs  validation.rs  version.rs  view.rs
src/git/: command.rs  ingest.rs  mod.rs  patch.rs  raw.rs
src/highlight/: intraline.rs  mod.rs  segment.rs  tokenize.rs
src/keys/: home.rs  mod.rs  store.rs
src/model/: file.rs  hunk.rs  id_prefix.rs  ids.rs  mod.rs  review.rs  review_note.rs  review_unit.rs  revision.rs  row.rs  validation.rs  work_object.rs
src/session/: benchmark.rs  body_artifact.rs  consume.rs  disposition.rs  event.rs  fingerprint.rs  history.rs  import.rs  intervention.rs  mod.rs  observation.rs  publish.rs  read.rs  review_unit_projection.rs  state.rs  store_init.rs  verdict.rs
src/sidecar/: legacy_hunk.rs  legacy_hunk_agent_context.rs  mod.rs  review_notes.rs
src/storage/: event_store.rs  mod.rs
src/stream/: build.rs  mod.rs  navigation.rs
src/tui/: app.rs  mod.rs  render.rs  terminal.rs  view.rs
tests/: acceptance.rs  agent_skill_validation_evidence.rs  build_provenance.rs  cli_body_removed_render.rs  cli_diff.rs  cli_dump.rs  cli_dump_review_artifacts.rs  cli_dump_stale_notes.rs  cli_environment.rs  cli_home.rs  cli_identity_whoami.rs  cli_inspect_auth.rs  cli_inspect_dag.rs  cli_inspect_decision_continuity.rs  cli_inspect_diff_ui.rs  cli_inspect_endpoints.rs  cli_inspect_fact_supersession.rs  cli_inspect_identity.rs  cli_inspect_keyboard.rs  cli_inspect_palette.rs  cli_inspect_revisions_ui.rs  cli_inspect_route_grammar.rs  cli_inspect_schema_break_diagnostic.rs  cli_inspect_shell.rs  cli_inspect_target_display.rs  cli_inspect_validation_ui.rs  cli_inspect_wire_parity.rs  cli_key.rs  cli_keys.rs  cli_linked_reads.rs  cli_notes_apply.rs  cli_output_format.rs  cli_removed_legacy.rs  cli_review_ack.rs  cli_review_assessment.rs  cli_review_association.rs  cli_review_capture.rs  cli_review_endorse.rs  cli_review_history.rs  cli_review_input_request.rs  (+41 more)
tests/acceptance/: anchor_resolution.rs  dump.rs  geometry.rs  git_ingestion.rs  large_changeset.rs  reload.rs  serialization.rs  session_state.rs  sidecar_order.rs  stream_navigation.rs
tests/support/: env.rs  event_signature_fixtures.rs  git_repo.rs  inspect.rs  mod.rs  snapshots.rs
(+415 files in other folders)
