[package]
name = "shoreline"
version = "0.1.0"
edition = "2024"
description = "Durable terminal code review for changes humans and coding agents collaborate on together"
rust-version = "1.95"
license = "Apache-2.0"
authors = ["Kevin Swiber <kevin@swiber.dev>"]
homepage = "https://github.com/kevinswiber/shoreline"
repository = "https://github.com/kevinswiber/shoreline"
documentation = "https://docs.rs/shoreline"
readme = "README.md"
keywords = ["code-review", "review", "terminal", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".claude/**",
    ".codex/**",
    ".github/**",
    "AGENTS.md",
    "CLAUDE.md",
    "mise.toml",
    "scripts/**",
    "src/cli/inspect/design-system/**",
    "src/cli/inspect/web/**",
]

[lib]
name = "shoreline"
path = "src/lib.rs"

[[bin]]
name = "shore"
path = "src/main.rs"

[[bench]]
name = "store_backend"
harness = false
required-features = ["bench"]

[features]
# Exposes the developer-run `bench_support` harness to the `store_backend`
# benchmark crate. Off by default and never enabled in a release build, so the
# harness stays out of the published surface.
bench = []

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
base64 = "0.22"
bs58 = "0.5"
ed25519-dalek = "2"
getrandom = "0.4"
mmdflux = { version = "2.6", default-features = false }
ratatui = { version = "0.30.0", default-features = false, features = ["std", "crossterm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
similar = { version = "2", default-features = false }
syntect = { version = "5", default-features = false, features = ["parsing", "regex-fancy"] }
thiserror = "1"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "json", "registry", "std"] }
two-face = { version = "0.5.1", default-features = false, features = ["syntect-fancy"] }
unicode-width = "0.2"

[dev-dependencies]
base64 = "0.22"
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
ctor = "0.2"
ed25519-dalek = "2"
sha2 = "0.10"
tempfile = "3"

[profile.test]
# CI sets RUST_BACKTRACE=1, so keep >= line tables for file:line in panics, but drop
# variable/type debuginfo to cut codegen + link + PDB time (bigger on Windows).
debug = "line-tables-only"
