[package]
name = "pointbreak"
version = "0.8.0"
build = "build.rs"
edition = "2024"
description = "Durable terminal code review for changes humans and coding agents collaborate on together"
rust-version = "1.95"
license = "Apache-2.0"
authors = ["Kevin Swiber <kevin@swiber.dev>"]
homepage = "https://github.com/withpointbreak/pointbreak"
repository = "https://github.com/withpointbreak/pointbreak"
documentation = "https://docs.rs/pointbreak"
readme = "README.md"
keywords = ["code-review", "review", "terminal", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".claude/**",
    ".codex/**",
    ".github/**",
    "AGENTS.md",
    "CLAUDE.md",
    "extensions/**",
    "mise.toml",
    "scripts/**",
    "src/cli/inspect/design-system/**",
    "src/cli/inspect/web/**",
]

[lib]
name = "pointbreak"
path = "src/lib.rs"

[[bin]]
name = "pointbreak"
path = "src/main.rs"

[[bench]]
name = "store_backend"
harness = false
required-features = ["bench"]

[[bench]]
name = "store_foundation"
harness = false
required-features = ["bench"]

[features]
# Exposes the developer-run `bench_support` harnesses to benchmark crates. Off
# by default and never enabled in a release build, so the harnesses stay out of
# the published surface.
bench = ["dep:libsqlite3-sys", "dep:rusqlite", "dep:zstd"]

[dependencies]
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
bs58 = "0.5"
ed25519-dalek = "2"
getrandom = "0.4"
libsqlite3-sys = { version = "0.38.1", features = ["bundled"], optional = true }
mmdflux = { version = "2.6", default-features = false }
rusqlite = { version = "0.40.1", default-features = false, features = ["backup", "bundled", "limits"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
similar = { version = "2", default-features = false }
syntect = { version = "5", default-features = false, features = ["parsing", "regex-fancy"] }
terminal-colorsaurus = "1"
thiserror = "1"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "json", "registry", "std"] }
two-face = { version = "0.5.1", default-features = false, features = ["syntect-fancy"] }
unicode-width = "0.2"
zstd = { version = "0.13.3", default-features = false, optional = true }

[dev-dependencies]
base64 = "0.22"
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
ctor = "0.2"
ed25519-dalek = "2"
libsqlite3-sys = { version = "0.38.1", features = ["bundled"] }
rusqlite = { version = "0.40.1", default-features = false, features = ["backup", "bundled", "limits"] }
sha2 = "0.10"
tempfile = "3"
zstd = { version = "0.13.3", default-features = false }

[profile.test]
# CI sets RUST_BACKTRACE=1, so keep >= line tables for file:line in panics, but drop
# variable/type debuginfo to cut codegen + link + PDB time (bigger on Windows).
debug = "line-tables-only"
